# learn_opencv

./: CMakeLists.txt  README.md
src/: 001_version.cc  002_rotate.cc  003_photocorrect.cc  004_feathering.cc  005_colorspace_convert.cc  006_hist.cc  007_resize.cc  008_adjust.cc  CMakeLists.txt
